--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,14 +12,14 @@
             android:inputType="textPersonName"
             android:text="Name"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentLeft="true" />
 
         <Button
             android:id="@+id/B_search"
             android:layout_width="100dp"
             android:layout_height="45dp"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/TF_location"
+            android:layout_toRightOf="@+id/TF_location"
             android:onClick="onClick"
             android:text="Search" />
 
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context="com.example.priyanka.mapsdemo.MapsActivity"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
             android:layout_below="@+id/B_hopistals" />
 
@@ -40,7 +40,7 @@
             android:id="@+id/B_hopistals"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_below="@+id/TF_location"
             android:onClick="onClick"
             android:text="Hospitals" />
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/TF_location"
-            android:layout_toEndOf="@+id/B_hopistals"
+            android:layout_toRightOf="@+id/B_hopistals"
             android:onClick="onClick"
             android:text="Schools" />
 
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/TF_location"
-            android:layout_toEndOf="@+id/B_schools"
+            android:layout_toRightOf="@+id/B_schools"
 
             android:onClick="onClick"
             android:text="Restautants" />
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/B_restaurants"
-            android:layout_toEndOf="@+id/B_restaurants"
+            android:layout_toRightOf="@+id/B_restaurants"
             android:onClick="onClick"
             android:text="To" />
 
